--- a/SS3_MillerA/jsconfig.json
+++ b/SS3_MillerA/jsconfig.json
@@ -5,6 +5,6 @@
   "include": [
     "*.js",
     "**/*.js",
-    "/Users/student/.vscode/extensions/samplavigne.p5-vscode-1.2.16/p5types/global.d.ts"
+    "c:\\Users\\24473821\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.16\\p5types\\global.d.ts"
   ]
 }
